<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_other_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="baton.studentinformationinputsystem.OtherInfoActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="50dp">
        <TextView
            android:layout_weight="10"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="start|center_vertical"
            android:textSize="20sp"
            android:text="@string/phone_label"
            />
        <EditText
            android:id="@+id/phone_edit"
            android:layout_weight="5"
            android:layout_gravity="end|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="50dp">
        <TextView
            android:layout_weight="10"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="start|center_vertical"
            android:textSize="20sp"
            android:text="@string/email_label"
            />
        <EditText
            android:id="@+id/email_edit"
            android:layout_weight="5"
            android:layout_gravity="end|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="50dp">
        <TextView
            android:layout_weight="10"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="start|center_vertical"
            android:textSize="20sp"
            android:text="@string/weixin_label"
            />
        <EditText
            android:id="@+id/weixin_edit"
            android:layout_weight="5"
            android:layout_gravity="end|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="0dp"
        android:layout_height="50dp">
        <TextView
            android:layout_weight="25"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="start|center_vertical"
            android:textSize="20sp"
            android:text="@string/special_skill_label"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="5">
            <CheckBox
                style="@style/MyCheckBox"
                android:id="@+id/music_cb"
                android:text="@string/music"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <CheckBox
                style="@style/MyCheckBox"
                android:id="@+id/art_cb"
                android:text="@string/arts"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                />
            <CheckBox
                style="@style/MyCheckBox"
                android:id="@+id/handwriting_cb"
                android:text="@string/handwriting"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                />
            <CheckBox
                style="@style/MyCheckBox"
                android:id="@+id/basketball_cb"
                android:text="@string/basketball"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                />
            <CheckBox
                style="@style/MyCheckBox"
                android:id="@+id/football_cb"
                android:text="@string/football"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                />
            <CheckBox
                style="@style/MyCheckBox"
                android:id="@+id/swimming_cb"
                android:text="@string/swimming"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                />
        </LinearLayout>

    </LinearLayout>
    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/commit"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/commit_button"/>
</LinearLayout>
