<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_basic_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="baton.studentinformationinputsystem.BasicInfoActivity">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="50dp">
        <TextView
            android:layout_weight="10"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="start|center_vertical"
            android:textSize="20sp"
            android:text="@string/stu_id_label"
            />
        <EditText
            android:id="@+id/stu_id_edit"
            android:layout_weight="5"
            android:layout_gravity="end|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="50dp">
        <TextView
            android:layout_weight="10"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="start|center_vertical"
            android:textSize="20sp"
            android:text="@string/name_label"
            />
        <EditText
            android:id="@+id/name_edit"
            android:layout_weight="5"
            android:layout_gravity="end|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="50dp">
        <TextView
            android:layout_weight="10"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="start|center_vertical"
            android:textSize="20sp"
            android:text="@string/id_number_label"
            />
        <EditText
            android:id="@+id/id_number_edit"
            android:layout_weight="5"
            android:layout_gravity="end|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="50dp">
        <TextView
            android:layout_weight="10"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="start|center_vertical"
            android:textSize="20sp"
            android:text="@string/sex_label"
            />
        <RadioGroup
            android:id="@+id/sex_radiogroup"
            android:layout_gravity="end|center"
            android:layout_weight="5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/man"
                android:layout_gravity="center_vertical"
                android:text="@string/man_label"
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>
            <View
                android:layout_gravity="center_vertical"
                android:layout_width="50dp"
                android:layout_height="match_parent"/>
            <RadioButton
                android:id="@+id/woman"
                android:layout_gravity="center_vertical"
                android:text="@string/woman_label"
                android:layout_width="wrap_content"
                android:layout_height="30dp"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="70dp">
        <TextView
            android:layout_weight="10"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="start|center_vertical"
            android:textSize="20sp"
            android:text="@string/native_place_label"
            />
        <EditText
            android:focusable="false"
            android:textSize="15sp"
            android:id="@+id/native_place_edit"
            android:layout_weight="5"
            android:layout_gravity="end|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="50dp">
        <TextView
            android:layout_weight="10"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="start|center_vertical"
            android:textSize="20sp"
            android:text="@string/birthday_label"
            />
        <LinearLayout
            android:layout_weight="5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <EditText
                android:focusable="false"
                android:id="@+id/year_birthday_edit"
                android:layout_weight="3"
                android:layout_gravity="end|center_vertical"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                />
            <TextView
                android:layout_weight="3"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/year_label"/>
            <EditText
                android:focusable="false"
                android:textSize="20sp"
                android:id="@+id/month_birthday_edit"
                android:layout_weight="3"
                android:layout_gravity="end|center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                />
            <TextView
                android:layout_weight="3"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/month_label"/>
            <EditText
                android:focusable="false"
                android:textSize="20sp"
                android:id="@+id/day_birthday_edit"
                android:layout_weight="3"
                android:layout_gravity="end|center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                />
            <TextView
                android:layout_weight="3"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/day_label"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/next"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/next_button"/>
</LinearLayout>
