<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_school_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="baton.studentinformationinputsystem.SchoolInfoActivity">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_height="50dp">
        <TextView
            android:layout_weight="10"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="start|center_vertical"
            android:textSize="20sp"
            android:text="@string/school_abel"
            />
        <Spinner
            android:id="@+id/schoollist_sp"
            android:layout_weight="5"
            android:layout_gravity="end"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="50dp">
        <TextView
            android:layout_weight="10"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="start|center_vertical"
            android:textSize="20sp"
            android:text="@string/major_label"
            />

        <EditText
            android:id="@+id/major_edit"
            android:layout_weight="5"
            android:layout_gravity="end|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="50dp">
        <TextView
            android:layout_weight="10"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="start|center_vertical"
            android:textSize="20sp"
            android:text="@string/stu_class_label"
            />
        <EditText
            android:id="@+id/stu_class_edit"
            android:layout_weight="5"
            android:layout_gravity="end|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>
    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/next"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/next_button"/>
</LinearLayout>
